--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,7 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        sudo apt install libmpfr-dev libmpc-dev python3-gmpy2 pylint python-is-python3
+        sudo apt install libmpfr-dev libmpc-dev python3-gmpy2 pylint python-is-python3 python3-pip
+        pip3 install pylint-exit
     - name: Analysing the code with pylint
       run: |
-        pylint `ls -R|grep .py$|xargs` --disable="no-name-in-module"
+        pylint `ls -R|grep .py$|xargs` --disable="no-name-in-module" || pylint-exit --error-fail $?
