--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,7 +2,11 @@ name: Pylint
 
 on: 
   push:
+    paths:
+      - '*.py'  
   pull_request:
+    paths:
+      - '*.py'  
   workflow_dispatch:
 
 jobs:
@@ -14,8 +18,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        sudo apt install libmpfr-dev libmpc-dev python3-gmpy2 pylint python-is-python3 python3-pip
+        sudo apt install libmpfr-dev libmpc-dev python3-gmpy2 python3-pylint-common python-is-python3 python3-pip
         pip3 install pylint-exit
-    - name: Analysing the code with pylint
-      run: |
-        pylint `ls -R|grep .py$|xargs` --disable="no-name-in-module" || pylint-exit --error-fail $?
+    - name: Analysing the SignatureForger.py with pylint
+      run: pylint SignatureForger.py --disable="no-name-in-module" --disable="redefined-builtin" || pylint-exit --error-fail --warn-fail $?
+    - name: Analysing the Forge.py with pylint
+      run: pylint Forge.py --disable="redefined-builtin" || pylint-exit --error-fail --warn-fail $?
+    - name: Analysing the HashInfo.py with pylint
+      run: pylint HashInfo.py || pylint-exit --error-fail --warn-fail $?
